--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,8 @@
-FROM python:latest
+FROM python
+
 WORKDIR /app
-COPY main.py
-RUN python main.py
+
+COPY main.py.
+
+ENTRYPOINT [ "python" , "main.py"]
 
